--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
                             <img src="bang1.jpg" alt="Bangalore Memory 1">
                         </div>
                         <div class="flip-card-back">
-                            <p>Starting a new chapter in Bangalore's vibrant tech scene!</p>
+                            <p>Our final time for a little while</p>
                         </div>
                     </div>
                 </div>
@@ -314,7 +314,7 @@
                             <img src="bang2.jpg" alt="Bangalore Memory 2">
                         </div>
                         <div class="flip-card-back">
-                            <p>Weekend adventures exploring the Garden City!</p>
+                            <p>Leaving AMCHI MUMBAI</p>
                         </div>
                     </div>
                 </div>
@@ -324,7 +324,7 @@
                             <img src="bang3.jpg" alt="Bangalore Memory 3">
                         </div>
                         <div class="flip-card-back">
-                            <p>Making new friends and creating lasting memories!</p>
+                            <p>Painful memories</p>
                         </div>
                     </div>
                 </div>
@@ -334,7 +334,7 @@
                             <img src="bang4.jpg" alt="Bangalore Memory 4">
                         </div>
                         <div class="flip-card-back">
-                            <p>Growing professionally and personally in this amazing city!</p>
+                            <p>Just wanting to come back</p>
                         </div>
                     </div>
                 </div>
